--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -140,7 +140,7 @@
                     Můžete si také porovnat jednotlivé složky kindexu u organizací mezi sebou.
                 </div>
                 <div class="block-tags">
-                    <a href="/kindex/porovnat/00006947,70856508,70994234,65993390,00064581" class="tag">Subjekty s největším objemem smluv</a>
+                    <a href="/kindex/porovnat/00006947,70856508,70994234,65993390,00064581" class="tag">Subjekty s největším finančním objemem smluv</a>
                     <a href="/kindex/porovnat/47114983,65269705,00064165,70994234,00098892" class="tag">Subjekty s největším počtem smluv</a>
                     <a href="/kindex/porovnat/47114983,42196451,00000205,00000493,00000515" class="tag">Největší státní podniky</a>
                     <a href="/kindex/porovnat/70889953,70890013,70889988,70890021,70890005" class="tag">Povodí</a>
