--- a/Web.Statu/Views/Home/Subjekt2_Profile.cshtml
+++ b/Web.Statu/Views/Home/Subjekt2_Profile.cshtml
@@ -109,7 +109,7 @@
                         </td>
                         <td>
                             <p class=" muted">
-                                Index korupčního rizika - zkráceně K–Index, je ukazatel, který ukazuje míru rizikových faktorů, které jsou spojeny s nehospodárným nakládáním s veřejnými penězi a rizikem korupce.
+                                Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejých peněz.
                             </p>
                             @if (kidx.roky.Any(m => m.KIndexReady))
                             {
@@ -118,7 +118,7 @@
                                 <table>
                                     <tr>
                                         <td>
-                                            @Html.KIndexLabelLink(kidx.Ico, klbl, "height:65px")
+                                            @Html.KIndexLabelLink(kidx.Ico, klbl, "height:65px", linkToKindex: true)
 
                                         </td>
                                         <td><div style="padding-left:1em;">
