--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -205,16 +205,16 @@
     }
     else
     {
-        if (DateTime.Now < new DateTime(2019, 5, 17, 15, 0, 0))
+        if (DateTime.Now < new DateTime(2020, 9, 30, 15, 0, 0))
         {
             <div class="alert alert-warning" role="alert" style="padding:1px">
                 <div class="text-center center-block" style="font-size:110%;color:red;">
-                    Pomůžeme vám s žádostí o voličský průkaz k volbách do EU parlamentu. Na poslání žádosti
+                    Pomůžeme vám s žádostí o voličský průkaz k volbách do krajských zastupitelstev. Na poslání žádosti
                     @Html.Raw(
-                         Devmasters.Core.Lang.Plural.GetWithZero((int)((new DateTime(2019, 5, 17, 15, 0, 0) - DateTime.Now).TotalDays)
+                         Devmasters.Core.Lang.Plural.GetWithZero((int)((new DateTime(2020, 9, 25, 15, 0, 0) - DateTime.Now).TotalDays)
                              , " nečekejte, zbývá pouze <b>pár hodin</b>", "zbývá <b>pouze 1 den</b>", "zbývájí <b>{0} dny</b>", "zbývá už <b>jen {0} dní</b>")
                     ).
-                    <a class="btn btn-default btn-sm" href="https://volby.hlidacstatu.cz/?utm_source=hlidacstatu&utm_medium=header&utm_campaign=eu2019" role="button">Začít hned</a>
+                    <a class="btn btn-default btn-sm" href="https://volby.hlidacstatu.cz/?utm_source=hlidacstatu&utm_medium=header&utm_campaign=volby2020" role="button">Začít hned</a>
                 </div>
             </div>
         }
