--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -209,7 +209,7 @@
         {
             <div class="alert alert-warning toplinemsg" role="alert" style="">
                 <div class="text-center center-block toplinemsgtxt " style="">
-                    Pomůžeme vám s žádostí o voličský průkaz k volbách do krajských zastupitelstev. Na poslání žádosti
+                    Pomůžeme vám s žádostí o voličský průkaz k volbám do krajů. Na podání žádosti 
                     @Html.Raw(
                          Devmasters.Core.Lang.Plural.GetWithZero((int)((new DateTime(2020, 9, 25, 15, 0, 0) - DateTime.Now).TotalDays)
                              , " nečekejte, zbývá pouze <b>pár hodin</b>", "zbývá <b>pouze 1 den</b>", "zbývájí <b>{0} dny</b>", "zbývá už <b>jen {0} dní</b>")
