--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -48,7 +48,7 @@
             </div>
 
             <div class="block-button-wrapper">
-                <a href="/kindex" class="btn btn-default btn-default-new">Sem nejspíš odkaz na blog, nebo článek o kindexu</a>
+                <a href="@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.GetKratkaMetodikaURL()" class="btn btn-default btn-default-new">Stručný popis K-Indexu</a>
             </div>
         </div>
 
