--- a/Web.Statu/Views/Kindex/Detail.cshtml
+++ b/Web.Statu/Views/Kindex/Detail.cshtml
@@ -10,6 +10,9 @@
     string ukazatTxt = "ukázat detail";
     string schovatTxt = "schovat detail";
 
+    ViewBag.Title = "K-Index" ;
+    ViewBag.SubTitle = "pro " + HlidacStatu.Lib.Data.Firmy.GetJmeno(Model.id);
+    ViewBag.HideTitle = true;
 }
 
 
